@@ -1,3 +1,8 @@
+Fri Jul 27 01:13:27 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* secore/searchconnection.py: For facet selection - don't return
+	  facets which only have 1 or 0 values.
+
 Thu Jul 26 17:02:33 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/datastructures.py: Warn early if a field is too long:
